# mts-status

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-cmake.yml
src/: main.cpp  mts-status.cpp  mts-stdout-client.cpp
